Corrected issues with slideshow on IE

--- a/_sass/_components.slider.scss
+++ b/_sass/_components.slider.scss
@@ -15,7 +15,7 @@
 }
 
 .slides {
-    display: inline-block;
+    display: block;
 }
 
 .js_slide {
@@ -45,5 +45,5 @@
 
 .next svg, .prev svg {
     width: 24px;
-    
+
 }
